--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -7,4 +7,22 @@ html
     = stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload'
     = javascript_include_tag 'application', 'data-turbolinks-track': 'reload'
   body
+    header.navbar.navbar-fixed-top.navbar-inverse
+      .container
+        nav
+          ul.nav.navbar-nav.navbar-right
+            li
+              = link_to "Home", root_path
+            - if logged_in?
+              li
+                = link_to "Users", '#'
+              li.dropdown
+              li = link_to "Profile", current_user
+              li = link_to "Settings", '#'
+              li.divider
+              li
+                = link_to "Log out", logout_path, method: :delete
+            - else
+              li
+                = link_to "Log in", login_path
     = yield
