--- a/app/views/users/new.html.slim
+++ b/app/views/users/new.html.slim
@@ -1,5 +1,6 @@
 h1 New user
+.row
+  .col-md-6.col-md-offset-3
+    == render 'form'
 
-== render 'form'
-
-= link_to 'Back', users_path
+    = link_to 'Back', users_path
