--- a/app/views/users/_form.html.slim
+++ b/app/views/users/_form.html.slim
@@ -12,4 +12,10 @@
   .field
     = f.label :email
     = f.text_field :email
+  .field
+    = f.label :password
+    = f.text_field :password
+  .field
+    = f.label :password_confirmation
+    = f.text_field :password_confirmation
   .actions = f.submit
