--- a/app/views/game/new.html.slim
+++ b/app/views/game/new.html.slim
@@ -1,4 +1,3 @@
 h1 Uno
-= react_component('Game', {gameHolder: @gameholder.to_json}, {prerender: true})
+= react_component('Game', {prerender: true})
 / = @game.player.to_json
-= @gameholder.to_json
